--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -14,12 +14,18 @@ default.blank.message=Property [{0}] of class [{1}] cannot be blank
 default.not.equal.message=Property [{0}] of class [{1}] with value [{2}] cannot equal [{3}]
 default.null.message=Property [{0}] of class [{1}] cannot be null
 default.not.unique.message=Property [{0}] of class [{1}] with value [{2}] must be unique
+com.intelligrape.linksharing.User.name.blank=Name cannot be left blank.
+com.intelligrape.linksharing.User.userName.blank=User Name cannot be left blank.
+com.intelligrape.linksharing.User.password.blank=Password cannot be left blank.
+com.intelligrape.linksharing.User.email.blank=Email cannot be left blank.
+com.intelligrape.linksharing.User.address.blank=Address cannot be left blank.
+com.intelligrape.linksharing.User.phoneNumber.nullable=Phone Number cannot be left blank.
 
 default.paginate.prev=Previous
 default.paginate.next=Next
-default.boolean.true=True
-default.boolean.false=False
-default.date.format=yyyy-MM-dd HH:mm:ss z
+default.boolean.true=Yes
+default.boolean.false=No
+default.date.format=MMM dd yyyy
 default.number.format=0
 
 default.created.message={0} {1} created
